module(
  name = "toolbelt",
  version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "1.9.0")

# Configure Python toolchains and pip dependencies.
# =================================================
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_linux = "//env_setup/py:env_setup/virtualenv_setup/requirements.lock",
)
use_repo(pip, "pypi")
