# Copyright 2026 Yuval Peress
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_docgen/docs.gni")
import("$dir_pw_unit_test/test.gni")

config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("debounce") {
  public_configs = [ ":default_config" ]
  public = [ "public/pw_dsp/debounce.h" ]
  sources = [ "debounce.cc" ]
  public_deps = [ "$dir_pw_async2:pw_async2" ]
}

pw_source_set("polling_debounce") {
  public_configs = [ ":default_config" ]
  public = [ "public/pw_dsp/polling_debounce.h" ]
  sources = [ "polling_debounce.cc" ]
  public_deps = [
    ":debounce",
    "$dir_pw_async2:pw_async2",
    "$dir_pw_async2:time_provider",
    "$dir_pw_chrono:system_clock",
    "$dir_pw_function",
  ]
}

pw_source_set("interrupt_debounce") {
  public_configs = [ ":default_config" ]
  public = [ "public/pw_dsp/interrupt_debounce.h" ]
  sources = [ "interrupt_debounce.cc" ]
  public_deps = [
    ":debounce",
    "$dir_pw_async2:pw_async2",
    "$dir_pw_async2:time_provider",
    "$dir_pw_chrono:system_clock",
    "$dir_pw_digital_io",
  ]
}

pw_test_group("tests") {
  tests = [
    ":polling_debounce_tests",
    ":interrupt_debounce_tests",
  ]
}

pw_test("polling_debounce_tests") {
  sources = [ "polling_debounce_test.cc" ]
  deps = [
    ":polling_debounce",
    "$dir_pw_async2:simulated_time_provider",
    "$dir_pw_async2:testing",
  ]
}

pw_test("interrupt_debounce_tests") {
  sources = [ "interrupt_debounce_test.cc" ]
  deps = [
    ":interrupt_debounce",
    "$dir_pw_async2:simulated_time_provider",
    "$dir_pw_async2:testing",
    "$dir_pw_digital_io",
  ]
}

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}
